# $Id: CMakeLists.txt 1428 2016-06-28 13:53:19Z klugeflo $
# build test programs

# add_executable(t-mkmon mkmon.cpp)
# target_link_libraries(t-mkmon
# 	tms
# 	${LIBXML2_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT}
# 	)
# install(TARGETS t-mkmon DESTINATION ${BIN_INSTALL_DIR})

# add_executable(bitmap bitmap.cpp)
# target_link_libraries(bitmap
# 	tms
# 	${LIBXML2_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT}
# 	)
# install(TARGETS bitmap DESTINATION ${BIN_INSTALL_DIR})
